--- a/BlogWarmUpSol/BlogWarmUp/Views/Posts/Delete.cshtml
+++ b/BlogWarmUpSol/BlogWarmUp/Views/Posts/Delete.cshtml
@@ -24,6 +24,12 @@
             @Html.DisplayFor(model => model.Content)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ImageUrl)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ImageUrl)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Category)
         </dt>
         <dd class = "col-sm-10">
