--- a/BlogWarmUpSol/BlogWarmUp/Views/Posts/Index.cshtml
+++ b/BlogWarmUpSol/BlogWarmUp/Views/Posts/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<BlogWarmUp.Models.Post>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Home";
 }
 
-<h1>Index</h1>
+<h1>Home</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -15,18 +15,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Title)
             </th>
-            <!-- <th>
-                @Html.DisplayNameFor(model => model.Content)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ImageUrl)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Category)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Date)
-            </th> -->
+            
             <th></th>
         </tr>
     </thead>
@@ -36,18 +25,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Content)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ImageUrl)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Category)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Date)
-            </td>
+ 
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
