--- a/BlogWarmUpSol/BlogWarmUp/Views/Posts/Details.cshtml
+++ b/BlogWarmUpSol/BlogWarmUp/Views/Posts/Details.cshtml
@@ -10,19 +10,19 @@
     <h4>Post</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Title)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Content)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Content)
         </dd>
-        <dt class = "col-sm-2">
+        <!--<dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ImageUrl)
         </dt>
         <dd class = "col-sm-10">
@@ -39,7 +39,7 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Date)
-        </dd>
+        </dd> -->
     </dl>
 </div>
 <div>
