implemented soft delete on dbcontext

--- a/BlogWarmUpSol/BlogWarmUp/Views/Posts/Index.cshtml
+++ b/BlogWarmUpSol/BlogWarmUp/Views/Posts/Index.cshtml
@@ -21,17 +21,24 @@
     </thead>
     <tbody>
 @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item[1])
-            </td>
- 
-            <td>
-                <a asp-action="Edit" asp-route-id="@item[0]">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item[0]">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item[0]">Delete</a>
-            </td>
-        </tr>
-}
+
+     @if(item[4] == "False")
+                {
+                   <tr>
+                       <td>
+                            @Html.DisplayFor(modelItem => item[1])
+                       </td>
+
+                       <td>
+                           <a asp-action="Edit" asp-route-id="@item[0]">Edit</a> |
+                           <a asp-action="Details" asp-route-id="@item[0]">Details</a> |
+                           <a asp-action="Delete" asp-route-id="@item[0]">Delete</a>
+                       </td>
+                   </tr>
+
+                }
+     
+            
+}    
     </tbody>
 </table>
